--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "@material-ui/core": "^1.3.0",
     "@material-ui/icons": "^1.1.0",
     "axios": "^0.18.0",
+    "cloudinary": "^1.11.0",
+    "moment": "^2.22.2",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-moment": "^0.7.9",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
