--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^1.1.0",
     "axios": "^0.18.0",
     "cloudinary": "^1.11.0",
+    "jss": "^9.8.7",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
